# hello-agents

./: .env.example  .gitignore  README.md  __init__.py  diagnose_embedding.py  pyproject.toml  version.py
agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
context/: builder.py
core/: __init__.py  agent.py  config.py  database_config.py  llm.py  message.py  my_llm.py
evaluation/benchmarks/bfcl/: dataset.py  evaluator.py  metrics.py
evaluation/benchmarks/gaia/: dataset.py
memory/: base.py  manager.py
memory/rag/: document.py  pipeline.py
memory/storage/: qdrant_store.py
memory/types/: episodic.py  perceptual.py  semantic.py  working.py
myAgents/: my_react_agent.py  my_simple_agent.py
myLLM/: __init__.py  my_llm.py
protocols/a2a/: implementation.py
protocols/mcp/: __init__.py  client.py
rl/: datasets.py  trainers.py  utils.py
tests/: test_azure_api.py  test_bfcl_evaluation.py  test_gaia_dataset.py  test_gaia_evaluation.py  test_github_api.py  test_mcptool_local.py  test_memory.py  test_my_react_agent.py  test_my_simple_agent.py  test_myllm.py  test_start_memory.py
tools/: async_executor.py  base.py  chain.py  registry.py
tools/builtin/: __init__.py  bfcl_evaluation_tool.py  calculator.py  memory_tool.py  note_tool.py  protocol_tools.py  rag_tool.py  rl_training_tool.py  search.py  terminal_tool.py
utils/: helpers.py  logging.py  serialization.py
